--- a/RegistroEstudiantes.AppMovil/RegistroEstudiantes.AppMovil.csproj
+++ b/RegistroEstudiantes.AppMovil/RegistroEstudiantes.AppMovil.csproj
@@ -77,6 +77,9 @@
 	  <MauiXaml Update="Vistas\AgregarEstudiante.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+		<MauiXaml Update="Vistas\EditarEstudiante.xaml">
+			<Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
 	  <MauiXaml Update="Vistas\ListarEstudiantes.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
